# Multiplayer

./: .gitignore
MPTestGame/: CMakeLists.txt
MPTestGame/GameClient/: CMakeLists.txt  Chat.cpp  Chat.h  Global.h  Player.cpp  Player.h  Timer.cpp  Timer.h  main.cpp
MPTestGame/GameServer/: CMakeLists.txt  main.cpp
